[package]
name = "driver-loader-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.50"
thiserror = "1.0.30"
goblin = {version= "0.6.0", features = ["pe64"]}
pdb = "0.8.0"
memmap = "0.7.0"
reqwest = {version = "0.11.12", features = ["blocking"]}
num_enum = "0.5.7"

[dependencies.winapi]
version = "0.3.9"
features = ["winioctl"]

[dependencies.windows]
version = "0.41.0"
features = [
    "Foundation_Numerics",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Graphics_Direct2D_Common",
    'Win32_Graphics_DirectWrite',
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_UI_Animation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Services",
    "Win32_Storage_FileSystem",
    "Win32_System_IO"
]